--- a/style.css
+++ b/style.css
@@ -23,8 +23,8 @@
   
   .meme-generator .generate-meme-btn:hover {
     padding: 8px 36px;
-    border-left: 8px solid #222;
-    border-right: 8px solid #222;
+    border-left: 8px solid #42d90ab9;
+    border-right: 8px solid #42d90ab9;
     letter-spacing: 3px;
   }
   
@@ -34,10 +34,10 @@
 body{
     width: 100%;
     height: 100vh;
-    background-image: url("https://images.pexels.com/photos/1939485/pexels-photo-1939485.jpeg?auto=compress&cs=tinysrgb&w=300");
+    background-image: url("https://i.pinimg.com/564x/c8/f7/bd/c8f7bdd3e52c315dafb9641f92672498.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     font-family: Arial, Helvetica, sans-serif;
-    color: #111000;
+    color: #ffffff;
 
 }
